// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.central";
option java_outer_classname = "CentralProto";
option objc_class_prefix = "HLW";

package central;

service Central {
    rpc sendExposureKeys(ExposureKeys) returns (Ack) {}
    rpc pollPositive(Date) returns (Batch) {}
    rpc pollNegative(Date) returns (Batch) {}
}

message ExposureKeys {
    uint64 token1 = 1;
    uint64 token2 = 2;
    uint64 token3 = 3;
    uint64 token4 = 4;
    uint64 token5 = 5;
    Date date1 = 6;
    Date date2 = 7;
    Date date3 = 8;
    Date date4 = 9;
    Date date5 = 10;
    TestResult result = 11;
}

message TestResult {
    bool ready = 1;
    uint64 taId = 2;
    string seq = 3;
    uint64 result = 4;
    string signature = 5;
}

message Ack {
    int32 ack = 1;
}

message Date {
    string date = 1;
}

message Batch {
    repeated uint64 token = 1;
}
